Prepare for QR code and check-in of ticket
